vlib/v/checker/tests/invalid_escape_err.vv
fn main() {
    println('\n\g')
}
